<resources>
    <string name="app_name">Punny</string>
    <string name="tvEmail">Email</string>
    <string name="tvPW">Password</string>
    <string name="tvPWInfo">(Must contain at least six characters)</string>
    <string name="tvPWR">Password</string>
    <string name="tvCPW">Confirm Password</string>
    <string name="tvFPW">Forgot Password?</string>
    <string name="tvRPW">Reset Password?</string>
    <string name="tvRPWInfo">Enter your email to reset password.</string>
    <string name="tvLogin">Login</string>
    <string name="tvNoAcc">Don\'t have an account? Register here.</string>
    <string name="tvAcc">Have an account? Log in.</string>
    <string name="tvRegister">Register</string>
    <string name="tvRemember">Remember Me</string>
    <string name="favourites">Favourites</string>
    <string name="create">Create</string>
    <string name="creations">My Creations</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="ChangePW">Change password</string>
    <string name="ChangeEmail">Change email</string>
    <string name="notification">Notifications</string>
    <string name="snotification">Enable Notifications</string>
    <string name="notificationInfo">Receive daily notifications displaying a new pun for the specified time of day.</string>
    <string name="DOW">Days of Week</string>
    <string name="TOD">Time of Day</string>
    <string name="etDOW">Enter Days of Week</string>
    <string name="etTOD">Enter Time of Day</string>
    <string name="helpDialogTitle">Help</string>
    <string name="createYP">Create your own pun!</string>
    <string name="createBtn">Create Pun</string>
    <string name="createPublishBtn">Create and Publish Pun</string>
    <string name="editS">Enter Setup</string>
    <string name="editP">Enter Punchline</string>
    <string name="deleteF">Delete Saved Pun?</string>
    <string name="deleteC">Delete Created Pun?</string>
    <string name="helpMessage">To cycle through puns, simply swipe up and down! \n\nTo favourite a pun, press the favourite icon on the top-right corner!
        \n\nTo share a pun, press the share icon on the top-right corner!\n\nFor help, press the help icon on the top-right corner!</string>
    <string name="helpMessageFav">To cycle through puns, simply swipe up and down!
        \n\nTo delete a pun, press the trash icon on the top-right corner!\n\nTo share a pun, press the share icon on the top-right corner!
        \n\nFor help, press the help icon on the top-right corner!
        \n\nThe delete and share icons would not be available if no puns are saved.</string>
    <string name="helpMessageCreate">To cycle through puns, simply swipe up and down!\n\nTo publish your created pun, press the publish icon on the top-right corner!
        \n\nTo edit a created pun, press the edit icon on the top-right corner!\n\nTo delete a created pun, press the trash icon on the top-right corner!
        \n\nTo share a pun, press the share icon on the top-right corner! \n\nFor help, press the help icon on the top-right corner!\n\nOnly the help icon would be available if no puns are created.</string>
    <string name="helpMessageCreatePun">The setup is the part of the pun that sets up the laugh. (Eg. What does a house wear?)
        \n\nThe punchline is the part of the pun that makes you laugh. (Eg. Address.)\n\nPressing Create Pun would store your pun inside our database for your own use.\n\nPressing Create and Publish Pun would store your pun inside our database and your pun will be displayed inside the app for other users to use as well.</string>
</resources>