<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFB83D"
    android:padding="10dp"
    tools:context=".Register">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRegister"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEmail"
            android:textColor="#FFB83D"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editEmailR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
            android:background="@drawable/logintextbox"
            android:ems="10"
            android:fontFamily="@font/pt_sans_bold"
            android:inputType="textEmailAddress"
            android:textColor="#FFB83D"
            android:text="testing2@gmail.com"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/tvPW"
                android:textColor="#FFB83D"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPWInfo"
                android:textColor="#FFB83D"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editPWR"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
            android:background="@drawable/logintextbox"
            android:ems="10"
            android:fontFamily="@font/pt_sans_bold"
            android:inputType="textPassword"
            android:textColor="#FFB83D"
            android:text="123456"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCPW"
            android:textColor="#FFB83D"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editCPW"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:padding="10dp"
            android:background="@drawable/logintextbox"
            android:ems="10"
            android:fontFamily="@font/pt_sans_bold"
            android:inputType="textPassword"
            android:textColor="#FFB83D"
            android:text="123456"/>


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signinbutton"
            android:layout_marginBottom="20dp"
            android:text="@string/tvRegister"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvAcc"
            android:textColor="#FFB83D"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>




</LinearLayout>
